// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<RadioCard
  onClick={[Function]}
  selected={true}
  title="baseline.number_days"
>
  <p
    className="big-spacer-bottom"
  >
    baseline.number_days.description
  </p>
  <MandatoryFieldsExplanation />
  <ValidationInput
    isInvalid={false}
    isValid={false}
    label="baseline.specify_days"
    labelHtmlFor="baseline_number_of_days"
    required={true}
  >
    <input
      onChange={[Function]}
      type="text"
      value="28"
    />
  </ValidationInput>
</RadioCard>
`;

exports[`should render correctly 2`] = `
<RadioCard
  onClick={[Function]}
  selected={true}
  title="baseline.number_days"
>
  <p
    className="big-spacer-bottom"
  >
    baseline.number_days.description
  </p>
  <MandatoryFieldsExplanation />
  <ValidationInput
    isInvalid={false}
    isValid={true}
    label="baseline.specify_days"
    labelHtmlFor="baseline_number_of_days"
    required={true}
  >
    <input
      onChange={[Function]}
      type="text"
      value="28"
    />
  </ValidationInput>
</RadioCard>
`;

exports[`should render correctly 3`] = `
<RadioCard
  onClick={[Function]}
  selected={true}
  title="baseline.number_days"
>
  <p
    className="big-spacer-bottom"
  >
    baseline.number_days.description
  </p>
  <MandatoryFieldsExplanation />
  <ValidationInput
    isInvalid={true}
    isValid={false}
    label="baseline.specify_days"
    labelHtmlFor="baseline_number_of_days"
    required={true}
  >
    <input
      onChange={[Function]}
      type="text"
      value="28"
    />
  </ValidationInput>
</RadioCard>
`;
